--- a/src/app/data-collection/edit-road/edit-road.component.html
+++ b/src/app/data-collection/edit-road/edit-road.component.html
@@ -13,7 +13,7 @@
     </div>
     <p>Road Class <strong>NA</strong></p>
 
-    <div class="shadow-md p-2 rounded">
+    <!-- <div class="shadow-md p-2 rounded">
       <p>* Reference TrashiYangtse Structure Plan</p>
       <table class="w-full table-auto text-xs">
         <tr>
@@ -38,7 +38,7 @@
         </tr>
       </table>
       <p>Footpath :1.2m & Drain 0.3 m</p>
-    </div>
+    </div> -->
   </div>
 
   <div
